Reword disable JS option
This is necessary, because Readability.js (rendering headlines)
needs JS, but when surfing websites in the internal browser
we still can disable JS

--- a/glade/prefs.ui
+++ b/glade/prefs.ui
@@ -642,7 +642,7 @@
                     </child>
                     <child>
                       <object class="GtkCheckButton" id="disablejavascript">
-                        <property name="label" translatable="yes">_Disable Javascript.</property>
+                        <property name="label" translatable="yes">_Never run external Javascript.</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">False</property>
